--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:bookdb
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+server:
+    port: $PORT
