--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,3 +41,12 @@ jobs:
       with:
         name: jar-file
         path: ${{ github.workspace }}/target/book*.jar
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: akhileshns/heroku-deploy@v3.13.15
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "murmuring-inlet-77824"
+          heroku_email: "romainsessa@gmail.com"
